--- a/ha.html
+++ b/ha.html
@@ -9,7 +9,7 @@
       <ul>
         <li><a href="dwarf.html"><b>&nbsp;&nbsp;Home&nbsp;&nbsp;</b></a></li>&nbsp;&nbsp;
       </ul>
-      <img src="ha.pn" height="640vh">
+      <img src="ha.jpeg" height="640vh">
       <h2><font size="100px" color="white">Haumea</h2>
         <p><b><font size="6" color="yellow">Haumea is a dwarf planet located beyond Neptune's orbit. It was discovered in 2004 by a team headed by Mike Brown of Caltech at the Palomar Observatory in the United States and disputably also in 2005 by a team headed by José Luis Ortiz Moreno at the Sierra Nevada Observatory in Spain, though the latter claim has been contested. On September 17, 2008, it was named after Haumea, the Hawaiian goddess of childbirth, under the expectation by the International Astronomical Union (IAU) that it would prove to be a dwarf planet. Nominal estimates make it the third-largest known trans-Neptunian object, after Eris and Pluto, though the uncertainty in best-fit modeling slightly overlaps with the larger size estimates for Makemake.
 
